[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1333,7 +1333,13 @@ Netcat(nc)
 Test-NetConnection
 에 대한 문서를 읽어보셔야 합니다.
 
+---
+
 ### DNS 심화 학습
+
+nslookup은 Linux, Mac, Windows에서 사용할 수 있으며, 기본적으로 호스트 이름을 입력하면 해당 **A 레코드(IP 주소)**를 반환합니다. 예를 들어 nslookup twitter.com 명령을 사용하면 twitter.com의 IP 주소가 출력됩니다.
+
+대화형 모드를 통해 더 많은 쿼리를 연속으로 실행할 수 있으며, server 명령을 사용해 다른 네임 서버를 지정하거나, set type=을 입력해 AAAA, MX, TXT 등의 레코드 유형을 명시적으로 요청할 수 있습니다. set debug 명령을 사용하면 전체 응답 패킷과 요청 내용을 포함한 디버그 정보를 볼 수 있어, 보다 세부적인 문제 해결에 도움이 됩니다.
 
 ### 클라우드
 
