[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1337,9 +1337,17 @@ Test-NetConnection
 
 ### DNS 심화 학습
 
-nslookup은 Linux, Mac, Windows에서 사용할 수 있으며, 기본적으로 호스트 이름을 입력하면 해당 **A 레코드(IP 주소)**를 반환합니다. 예를 들어 nslookup twitter.com 명령을 사용하면 twitter.com의 IP 주소가 출력됩니다.
+nslookup은 Linux, Mac, Windows에서 사용할 수 있으며, 기본적으로 호스트 이름을 입력하면 해당 **A 레코드(IP 주소)** 를 반환합니다. 예를 들어 nslookup twitter.com 명령을 사용하면 twitter.com의 IP 주소가 출력됩니다.
 
 대화형 모드를 통해 더 많은 쿼리를 연속으로 실행할 수 있으며, server 명령을 사용해 다른 네임 서버를 지정하거나, set type=을 입력해 AAAA, MX, TXT 등의 레코드 유형을 명시적으로 요청할 수 있습니다. set debug 명령을 사용하면 전체 응답 패킷과 요청 내용을 포함한 디버그 정보를 볼 수 있어, 보다 세부적인 문제 해결에 도움이 됩니다.
+
+---
+
+DNS는 네트워크의 중요한 요소로, ISP는 재귀 네임서버를 제공하며, 대부분의 기업은 내부 호스트 이름 변환을 위해 자체 DNS 서버를 운영합니다. 최근에는 서비스형 DNS 제공업체를 사용하는 경우도 늘고 있습니다. DNS 기능에 문제가 발생할 경우, 테스트 방법을 통해 문제를 해결할 수 있으며, 백업 DNS 서버를 두는 것이 유용합니다.
+
+공용 DNS 서버는 이름 변환 문제를 해결할 수 있는 옵션입니다. 오랫동안 많은 시스템 관리자들이 Level 3 Communications의 공용 DNS 서버(4.2.2.1~4.2.2.6)를 사용해 왔지만, 이는 공식적으로 광고된 서비스는 아니었습니다. 더 쉽게 기억할 수 있는 공용 DNS 서버로는 Google Public DNS가 있으며, 8.8.8.8과 8.8.4.4에서 제공됩니다. 이는 Google이 공식적으로 인정한 무료 DNS 서비스입니다.
+
+공용 DNS 서버는 전 세계적으로 애니캐스트를 통해 제공되며, 이러한 네임서버를 사용하기 전에 신뢰할 수 있는 조직에서 운영하는지 확인해야 합니다. DNS 하이재킹 위험이 있을 수 있으므로, 신뢰할 수 있는 서버만 사용하는 것이 좋습니다. 대부분의 공용 DNS 서버는 ICMP echo request에도 응답하므로, ping을 사용해 네트워크 연결을 테스트하는 데에도 활용할 수 있습니다.
 
 ### 클라우드
 
