--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1349,6 +1349,20 @@ DNS는 네트워크의 중요한 요소로, ISP는 재귀 네임서버를 제공
 
 공용 DNS 서버는 전 세계적으로 애니캐스트를 통해 제공되며, 이러한 네임서버를 사용하기 전에 신뢰할 수 있는 조직에서 운영하는지 확인해야 합니다. DNS 하이재킹 위험이 있을 수 있으므로, 신뢰할 수 있는 서버만 사용하는 것이 좋습니다. 대부분의 공용 DNS 서버는 ICMP echo request에도 응답하므로, ping을 사용해 네트워크 연결을 테스트하는 데에도 활용할 수 있습니다.
 
+---
+
+DNS는 전 세계적으로 고유한 도메인 이름을 관리하는 시스템으로, ICANN이 최고 수준에서 계층적으로 관리합니다. 도메인 이름의 혼란을 방지하기 위해, 도메인 이름을 할당하는 역할을 하는 등록기관이 존재합니다. 원래는 **Network Solutions Inc.** 가 거의 모든 도메인의 등록을 담당했으나, 인터넷 사용이 증가하면서 경쟁이 생기고 다른 회사들도 도메인 이름을 판매하게 되었습니다.
+
+도메인 이름 등록은 간단한 과정으로, 등록기관에서 계정을 만들고 도메인 이름을 검색한 후 등록하고, 네임서버를 설정할 수 있습니다. 도메인 이름은 개인이나 등록기관 간에 양도할 수 있으며, 양도를 위해 특정 문자열을 사용하여 소유권을 입증합니다. 도메인 이름 등록은 일정 기간 동안만 유효하며, 만료되면 다른 사람이 등록할 수 있으므로 만료 시기를 잘 관리해야 합니다.
+
+---
+
+DNS가 보편화되기 전, 컴퓨터 운영자들은 숫자로 구성된 네트워크 주소를 단어와 연결하기 위해 호스트 파일을 사용했습니다. 호스트 파일은 각 줄에 네트워크 주소와 호스트 이름을 포함하는 플랫 파일로, 컴퓨터에서 호스트 이름을 IP 주소로 변환하는 역할을 합니다. 예를 들어, `1.2.3.4 webserver`라고 설정되면, 사용자는 `webserver`를 입력해도 `1.2.3.4`로 참조할 수 있습니다.
+
+호스트 파일은 여전히 최신 운영체제에서도 사용되며, 특히 루프백 주소(IPv4: 127.0.0.1, IPv6: ::1)를 설정하는 데 사용됩니다. 루프백 주소는 트래픽을 네트워크를 우회해 자신에게 보내는 데 사용됩니다.
+
+비록 DNS가 널리 사용되면서 호스트 파일의 사용은 줄었지만, 일부 소프트웨어는 여전히 호스트 파일을 필요로 하며, IT 문제 해결에도 유용할 수 있습니다. 하지만 컴퓨터 바이러스가 호스트 파일을 조작해 사용자 트래픽을 악성 사이트로 리디렉션할 수 있으므로 주의가 필요합니다.
+
 ### 클라우드
 
 ### IPv6
