--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1363,6 +1363,16 @@ DNS가 보편화되기 전, 컴퓨터 운영자들은 숫자로 구성된 네트
 
 비록 DNS가 널리 사용되면서 호스트 파일의 사용은 줄었지만, 일부 소프트웨어는 여전히 호스트 파일을 필요로 하며, IT 문제 해결에도 유용할 수 있습니다. 하지만 컴퓨터 바이러스가 호스트 파일을 조작해 사용자 트래픽을 악성 사이트로 리디렉션할 수 있으므로 주의가 필요합니다.
 
+---
+
 ### 클라우드
+
+클라우드는 단일 기술이 아니라, 공유 컴퓨팅 리소스를 프로비저닝하여 많은 사용자가 필요할 때 리소스를 사용할 수 있게 하는 개념입니다. 클라우드의 핵심 기술은 하드웨어 가상화로, 하나의 물리적 시스템에서 여러 개의 가상 시스템(인스턴스)을 실행할 수 있게 해줍니다. 하이퍼바이저라는 소프트웨어가 가상 머신을 관리하며, 물리적 하드웨어와 유사한 환경을 제공합니다.
+
+이러한 가상화 시스템을 통해, 여러 개의 서버를 구입해 각각의 용도로 사용하던 방식 대신, 필요한 리소스를 효율적으로 분배할 수 있습니다. 예를 들어, RAM이 많이 필요할 때만 필요한 리소스를 사용하고, 나머지 시간에는 리소스를 아끼는 방식으로 운영할 수 있습니다. 이를 통해 비용을 절감하고, 자원을 효과적으로 활용할 수 있습니다.
+
+클라우드 컴퓨팅에는 퍼블릭 클라우드, 프라이빗 클라우드, 하이브리드 클라우드가 있습니다. 퍼블릭 클라우드는 외부 회사에서 운영하는 대규모 서버 클러스터를 공유하고, 프라이빗 클라우드는 한 기업이 자체적으로 운영하는 클라우드를 말합니다. 하이브리드 클라우드는 민감한 데이터를 프라이빗 클라우드에서, 덜 민감한 서버는 퍼블릭 클라우드에서 운영하는 방식입니다.
+
+클라우드 컴퓨팅의 장점은 유연성과 확장성으로, 필요한 리소스를 빠르게 추가하거나 기존 서비스를 쉽게 활용할 수 있습니다. 이를 통해 기업은 물리적 하드웨어를 기다릴 필요 없이 버튼 몇 번으로 새로운 서버를 프로비저닝할 수 있고, 다양한 서비스를 손쉽게 사용할 수 있습니다.
 
 ### IPv6
