[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1375,4 +1375,24 @@ DNS가 보편화되기 전, 컴퓨터 운영자들은 숫자로 구성된 네트
 
 클라우드 컴퓨팅의 장점은 유연성과 확장성으로, 필요한 리소스를 빠르게 추가하거나 기존 서비스를 쉽게 활용할 수 있습니다. 이를 통해 기업은 물리적 하드웨어를 기다릴 필요 없이 버튼 몇 번으로 새로운 서버를 프로비저닝할 수 있고, 다양한 서비스를 손쉽게 사용할 수 있습니다.
 
+---
+
+클라우드 컴퓨팅에서 자주 사용되는 용어인 "X as a Service" 개념을 설명합니다. 여기서 X는 다양한 항목을 나타낼 수 있으며, 클라우드에서 제공하는 다양한 서비스 유형을 가리킵니다.
+
+1. Infrastructure as a Service (IaaS): 물리적 인프라(서버, 네트워크 등)를 제공하는 서비스로, 사용자는 인프라를 직접 구축할 필요 없이 비용을 지불하고 사용합니다.
+
+2. Platform as a Service (PaaS): 소프트웨어를 실행할 수 있는 플랫폼을 제공하는 서비스입니다. 예를 들어, 개발자는 복잡한 서버 설정 없이 애플리케이션을 실행할 환경만 필요할 때 PaaS를 사용하여 소프트웨어를 쉽게 실행할 수 있습니다.
+
+3. Software as a Service (SaaS): 중앙에서 소프트웨어를 호스팅하고 관리하여, 사용자가 인터넷을 통해 소프트웨어를 사용할 수 있게 하는 서비스입니다. 예시로는 Google의 Gmail for Business, Microsoft의 Office 365 같은 이메일 서비스가 있습니다. SaaS는 웹브라우저를 통해 다양한 기능을 제공하며, 워드 프로세서, 그래픽 디자인 프로그램, 인사 관리 솔루션 등의 구독 기반 서비스 모델이 포함됩니다.
+
+결론적으로, 클라우드 컴퓨팅은 다양한 서비스 모델을 제공하며, 이들 중 많은 기능이 이제 웹브라우저에서 실행되어 더 쉽게 접근할 수 있습니다.
+
+---
+
+클라우드 스토리지는 데이터를 안전하게 저장하고 액세스 가능하게 유지하는 서비스로, 고객은 클라우드 스토리지 제공업체와 계약을 통해 데이터를 보관합니다. 클라우드 스토리지의 주요 이점은 물리적 하드웨어 관리의 번거로움을 덜 수 있다는 것입니다. 제공업체가 물리적 하드웨어를 모니터링하고, 문제가 발생하면 즉시 대체해 주며, 데이터는 여러 지역에 복제되어 저장되므로 데이터 손실 위험이 줄어듭니다.
+
+또한 클라우드 스토리지는 사용한 만큼 비용을 지불하는 모델로, 스토리지 크기를 유연하게 관리할 수 있습니다. 이는 대규모 로컬 스토리지 배열을 대체하거나, 스마트폰과 같은 기기의 데이터를 백업하는 데도 유용한 솔루션입니다. 예를 들어, 스마트폰 사진을 자동으로 클라우드에 업로드하면, 기기를 분실하거나 데이터가 삭제되어도 사진은 안전하게 클라우드에 남아 있습니다.
+
+결과적으로, 클라우드 스토리지는 안정성, 유연성, 확장성을 제공하여, 다양한 규모의 데이터 관리에 적합한 솔루션입니다.
+
 ### IPv6
