[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1395,4 +1395,41 @@ DNS가 보편화되기 전, 컴퓨터 운영자들은 숫자로 구성된 네트
 
 결과적으로, 클라우드 스토리지는 안정성, 유연성, 확장성을 제공하여, 다양한 규모의 데이터 관리에 적합한 솔루션입니다.
 
+---
+
 ### IPv6
+
+IPv4 주소 공간이 고갈될 것을 예상하여 IPv6가 개발되었습니다. IPv4는 32비트 주소 체계를 사용해 약 42억 개의 IP 주소를 제공하지만, 전 세계의 기기 수에 비해 부족합니다. 반면, IPv6는 128비트 주소 체계를 사용하여 엄청난 수의 IP 주소를 제공합니다. IPv6는 2의 128제곱(약 39자리의 숫자)으로, 사실상 거의 무한한 주소 공간을 제공하여 지구상의 모든 원자에도 IP를 부여할 수 있을 정도입니다.
+
+IPv6 주소는 128비트로, 16비트 그룹 8개로 나누어 16진수로 표기됩니다. 이를 줄이기 위해 앞에 오는 0을 제거하거나, 0으로만 구성된 연속된 그룹을 **이중 콜론(::)** 으로 대체할 수 있습니다. 예를 들어, IPv6 루프백 주소는 ::1로 표현됩니다.
+
+IPv6는 멀티캐스트(FE00::), 링크-로컬 유니캐스트(FE80::) 등 다양한 용도로 예약된 주소 범위를 가지고 있습니다. IPv6는 64비트를 네트워크 ID로, 나머지 64비트를 호스트 ID로 사용하여 한 네트워크에 엄청난 수의 호스트를 수용할 수 있습니다. 서브넷팅도 가능하며, CIDR 표기법을 사용해 네트워크 관리가 이루어집니다. IPv6는 이처럼 주소 공간 부족 문제를 해결하고, 더 나은 확장성과 유연성을 제공합니다.
+
+---
+
+Pv6는 개발 과정에서 단순히 주소 크기를 늘리는 것 외에도 몇 가지 개선 사항이 도입되었습니다. 그중 하나는 IPv6 헤더가 IPv4보다 더 간단해진 것입니다.
+
+IPv6 헤더는 다음과 같은 필드로 구성됩니다:
+
+1. 버전 필드: IP 버전을 정의하는 4비트 필드로, IPv4와 동일한 위치에 있습니다.
+2. 트래픽 클래스 필드: 8비트 필드로, 데이터그램의 트래픽 유형과 우선순위를 정의합니다.
+3. 흐름 라벨 필드: 20비트 필드로, 트래픽 클래스 필드와 함께 특정 데이터그램의 서비스 품질(QoS)을 결정하는 데 사용됩니다.
+4. 페이로드 길이 필드: 데이터그램의 데이터 페이로드 섹션의 길이를 정의하는 16비트 필드입니다.
+5. 다음 헤더 필드: IPv6의 고유 개념으로, 다음에 오는 헤더의 종류를 정의하며, 선택적 추가 헤더들이 연속해서 올 수 있도록 헤더 체인을 형성할 수 있습니다.
+6. 홉 제한 필드: IPv4의 TTL(Time To Live) 필드와 동일한 역할을 하는 8비트 필드입니다.
+7. 소스 및 대상 주소 필드: 각각 128비트로, 소스와 목적지의 IPv6 주소를 나타냅니다.
+   이러한 필드 구성 덕분에 IPv6는 효율적이고 단순한 구조를 유지하면서도 더 큰 주소 공간을 지원할 수 있게 되었습니다.
+
+---
+
+IPv6로의 전환은 복잡하고 오래된 IPv4 기반의 기기들이 여전히 많기 때문에 IPv6와 IPv4 트래픽이 동시에 공존할 수 있는 방법이 필요합니다. IPv4 매핑 주소 공간을 통해 IPv4 주소를 IPv6 주소로 변환하여 IPv4 트래픽이 IPv6 네트워크를 통과할 수 있습니다.
+
+IPv6와 IPv4 네트워크 간의 상호작용을 지원하는 주요 방법 중 하나는 IPv6 터널링입니다. 이는 IPv6 터널 서버를 통해 IPv6 트래픽을 IPv4 데이터그램 내에 캡슐화하여 IPv4 네트워크를 통해 전송하는 방식입니다. 수신 측의 IPv6 터널 서버는 캡슐화를 풀고 다시 IPv6 트래픽을 전달합니다.
+
+IPv6 터널 브로커는 이러한 터널링을 제공하는 서비스로, 네트워크에 추가 장비 없이 IPv6 터널링을 가능하게 합니다. 여러 터널링 프로토콜이 경쟁하고 있지만, 시간이 지나면 IPv6가 네트워킹의 기본 프로토콜로 자리 잡고, 결국 터널링이 필요 없게 될 것입니다.
+
+결론적으로, IPv6 전환이 진행되는 동안, 터널링 기술은 IPv4와 IPv6 간 상호 연결을 지원하는 중요한 역할을 하고 있으며, 미래에는 IPv6가 완전히 자리 잡아 터널이 필요 없는 네트워킹이 될 것입니다.
+
+---
+
+IPv6가 더 널리 채택되면서 인터넷 백본에 남아 있는 오래된 IPv4를 이동할 방법이 필요하게 됩니다. 오늘날 사용되는 주된 방법은 IPv6 터널을 통과하는 것입니다. IPv6 터널은 개념적으로는 매우 간단합니다. 이 터널은 연결의 양쪽 끝에 있는 IPv6 터널 서버로 구성됩니다. 이 IPv6 터널 서버는 들어오는 IPv6 트래픽을 가져와 기존 IPv4 데이터그램 내에 캡슐화합니다. 그런 다음 IPv4 인터넷 공간을 통해 전달되고 이 인터넷 공간에서 또 다른 IPv6 터널 서버에 의해 수신됩니다. 해당 서버는 캡슐화 해제를 수행하고 네트워크를 따라 IPv6 트래픽을 전달합니다.
