--- a/08. 강의/Google IT 지원 수료증 이수 과정/03. 운영체제와 나:고급 사용자 되기.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/03. 운영체제와 나:고급 사용자 되기.md
@@ -6,6 +6,8 @@
 
 이 강좌에서는 Windows와 Linux 운영체제에서 명령줄 사용법, 파일 시스템, 사용자 권한 및 역할 관리, 패키지 관리자 사용, 프로세스 관리, 원격 접속 도구 등을 배웁니다. 또한 여러 컴퓨터에 OS를 배포하는 방법도 학습합니다.
 
----
-
 ### 운영체제 소개 및 고급 사용자 되기
+
+### 기본 명령어
+
+### 파일 및 텍스트 조작
