[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/03. 운영체제와 나:고급 사용자 되기.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/03. 운영체제와 나:고급 사용자 되기.md
@@ -4,10 +4,23 @@
 
 ## 시스템 탐색하기
 
-이 강좌에서는 Windows와 Linux 운영체제에서 명령줄 사용법, 파일 시스템, 사용자 권한 및 역할 관리, 패키지 관리자 사용, 프로세스 관리, 원격 접속 도구 등을 배웁니다. 또한 여러 컴퓨터에 OS를 배포하는 방법도 학습합니다.
-
 ### 운영체제 소개 및 고급 사용자 되기
 
+이 강좌에서는 Windows와 Linux 운영체제의 기초부터 실용적인 측면까지 다룹니다. 명령줄 사용법, 파일 시스템 구조, 사용자 권한 관리, 패키지 관리자 이해, 프로세스 관리, 원격 접속 도구 활용법을 배우며, OS를 여러 컴퓨터에 배포하는 방법도 학습합니다. 신디는 명령줄 사용법이 중요하지만 처음에는 두려울 수 있음을 인정하며, 차근차근 학습할 수 있도록 안내합니다.
+
+또한, 실제 운영체제를 탐색하며 학습하는 것을 권장하며, 퀵랩스 애플리케이션을 통해 Windows와 Linux OS 사용을 시뮬레이션할 수 있다고 안내합니다. 이 강좌를 통해 운영체제의 고급 사용자가 되어, IT 지원 전문가로서의 경력을 쌓는 데 필요한 역량을 기를 수 있습니다.
+
+---
+
 ### 기본 명령어
+
+이 과정에서는 Windows와 Linux 운영체제 탐색을 본격적으로 배우며, 두 운영체제의 CLI(명령줄 인터프리터) 사용법을 익힙니다. Windows에서는 GUI와 CLI를 사용해 탐색하고, Linux에서는 CLI를 집중적으로 다루며 Bash 셸을 사용합니다.
+
+이 강좌에서는 두 가지 주요 주제를 다룹니다:
+
+1. 기본 운영체제 탐색: 디렉터리 간 이동, 파일 정보 확인, 파일 및 디렉터리 삭제.
+2. 파일 및 텍스트 조작: 파일 검색, 복사/붙여넣기, 명령어 연결.
+
+직접 따라 해보며 CLI 사용법을 익히는 것이 중요하며, 배운 명령어를 메모해 두는 것도 도움이 됩니다. CLI는 모든 운영체제에서 효율적인 업무 처리를 가능하게 해줍니다.
 
 ### 파일 및 텍스트 조작
