[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/03. 운영체제와 나:고급 사용자 되기.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/03. 운영체제와 나:고급 사용자 되기.md
@@ -23,4 +23,83 @@
 
 직접 따라 해보며 CLI 사용법을 익히는 것이 중요하며, 배운 명령어를 메모해 두는 것도 도움이 됩니다. CLI는 모든 운영체제에서 효율적인 업무 처리를 가능하게 해줍니다.
 
+---
+
+이 강의에서는 Windows의 디렉터리와 파일 탐색에 대해 다룹니다. **경로(Path)** 는 파일과 디렉터리의 위치를 나타내며, Windows에서는 주로 C:\Users\Cindy\Desktop와 같은 형태입니다. 각 드라이브에는 드라이브 문자(예: C:, D:)가 있으며, 각 드라이브에는 최상위 루트 디렉터리가 존재합니다. Windows는 경로 구분에 **백슬래시(\\)** 를 사용하고, Linux는 **슬래시(/)** 를 사용합니다.
+
+Windows 탐색기에서 'View' 옵션의 'Hidden items'를 활성화하여 숨겨진 파일을 볼 수 있습니다. 숨겨진 파일은 실수로 수정되지 않도록 보호하거나 시스템 구성 파일로 숨겨져 있을 수 있습니다.
+
+파일 속성 정보를 확인하려면 **파일을 오른쪽 클릭하여 'Properties'** 를 선택합니다. 여기서 파일 이름, 위치, 크기, 생성 및 수정 시간, 속성 등을 볼 수 있으며, 'Read-only'와 'Hidden' 속성을 설정할 수 있습니다. 'Previous Versions' 탭에서는 파일의 이전 버전을 복원할 수 있습니다.
+
+이 강의에서는 Windows GUI에서 파일 정보를 보는 방법을 다루었으며, 다음 강의에서는 CLI를 통해 정보를 보는 방법을 배웁니다.
+
+---
+
+Windows 파일 또는 폴더의 **속성에서 '크기(Size)'와 '디스크 상 크기(Size on Disk)'** 가 무엇을 의미하는지 설명합니다.
+
+**크기(Size)** 는 파일 크기의 합계를 의미하며, FindFirstFile 함수를 통해 파일 크기를 얻습니다. 그러나 NTFS 파일 시스템에서는 파일이 여전히 쓰이고 있는 경우 정확한 파일 크기를 보고하지 않을 수 있습니다.
+
+**디스크 상 크기(Size on Disk)** 는 더 복잡합니다. 드라이브가 압축을 지원하면(GetVolumeInformation 함수로 확인) 압축 파일은 압축된 크기로, 희소 파일(데이터가 비어있는 부분이 0으로 처리되는 파일)은 실제 사용 중인 부분만을 크기로 계산합니다. 압축이 아닌 일반 파일은 파일 크기가 클러스터 크기로 반올림된 값이 됩니다.
+
+이 알고리즘은 Windows 95의 FAT 파일 시스템을 기반으로 설계되었지만, NTFS 파일 시스템에서는 하드 링크, 대체 데이터 스트림, 메타데이터 등으로 인해 파일 크기가 달라질 수 있어 정확하지 않을 수 있습니다.
+
+따라서 Size on Disk 값은 대략적인 추정치일 뿐이며, 정확한 디스크 사용량 추적이 필요한 경우 디스크 할당량(Disk Quotas) 기능을 사용하는 것이 좋습니다.
+
+---
+
+이 강의에서는 Windows 명령줄 인터페이스(CLI) 중 PowerShell을 사용하여 파일과 디렉터리를 탐색하는 방법을 설명합니다. Windows에는 명령 프롬프트와 PowerShell 두 가지 CLI가 있으며, 이 강좌에서는 PowerShell로 실습합니다.
+
+PowerShell에서 ls 명령어는 디렉터리 목록을 나열하는 데 사용됩니다. ls 명령어에 경로를 매개변수로 추가하여 특정 디렉터리의 파일 목록을 볼 수 있습니다. C: 드라이브의 루트 디렉터리는 **상위 디렉터리(Parent Directory)** 로, 그 하위 폴더들은 **하위 디렉터리(Child Directory)** 입니다.
+
+주요 디렉터리는 다음과 같습니다:
+
+1. Program Files (x86): 대부분의 애플리케이션과 프로그램이 설치되는 위치.
+2. Users: 각 사용자에게 할당된 홈 디렉터리가 포함된 디렉터리.
+3. Windows: 운영체제가 설치된 디렉터리.
+
+PowerShell에서 Get-Help ls를 사용하면 ls 명령어의 매개변수 정보를 볼 수 있으며, 숨겨진 파일을 표시하려면 -Force 매개변수를 사용합니다. 이를 통해 평소에는 보이지 않는 파일과 시스템 파일, 예를 들어 휴지통 디렉터리나 ProgramData 디렉터리 내 데이터를 확인할 수 있습니다.
+
+---
+
+이 강의에서는 Linux의 파일 시스템 탐색과 명령어 사용법을 설명합니다.
+
+1. 루트 디렉터리: Linux의 모든 디렉터리는 루트 디렉터리(/) 아래에 있습니다. 예를 들어, /home/cindy/Desktop 같은 경로가 이에 속합니다.
+
+2. 주요 디렉터리:
+
+   - /bin: 필수 프로그램 저장. 예) ls 명령어도 여기 저장됨.
+   - /etc: 중요한 시스템 구성 파일.
+   - /home: 사용자별 개인 디렉터리.
+   - /proc: 실행 중인 프로세스 정보.
+   - /var: 로그와 자주 변경되는 파일 저장.
+
+3. ls 명령어: 디렉터리 내용을 나열하며, 다양한 플래그를 통해 상세한 정보를 볼 수 있습니다.
+
+   - -l: 긴 목록으로 세부 정보 표시 (권한, 링크 수, 소유자, 그룹, 크기, 수정일).
+   - -a: 모든 파일 표시 (숨겨진 파일 포함).
+     여러 플래그를 조합하여 사용할 수 있음(ls -la 등).
+
+4. 도움말 확인: 명령어 사용법과 플래그를 보려면 --help나 man을 사용할 수 있습니다. man ls는 ls의 모든 세부 정보를 확인할 수 있는 매뉴얼 페이지를 열어줍니다.
+
+이 강의에서는 Linux CLI에서 파일 시스템을 탐색하고 명령어의 도움말을 찾는 방법을 배웠습니다.
+
+---
+
+이 강의에서는 window 디렉터리 간 이동을 다루며, 경로의 두 가지 유형인 절대 경로와 상대 경로를 소개합니다. 절대 경로는 **메인 디렉터리(root)** 에서 시작하고, 상대 경로는 현재 디렉터리에서 시작합니다.
+
+GUI에서는 경로 유형의 차이가 크게 중요하지 않지만, **CLI(명령줄)** 에서 작업할 때는 중요합니다. 이후 강의에서는 Windows CLI에서 디렉터리 이동 방법을 학습할 예정입니다.
+
+---
+
+PowerShell에서 디렉터리 탐색 방법과 유용한 명령어를 다룹니다.
+
+1. 현재 위치 확인: pwd 명령어로 현재 디렉터리를 표시합니다.
+2. 디렉터리 이동: cd 명령어와 함께 경로를 입력하여 다른 디렉터리로 이동할 수 있습니다.
+   - 절대 경로(예: cd C:\Users\cindy\Documents): 루트에서 시작하여 전체 경로 입력.
+   - 상대 경로(예: cd ..): 현재 위치에서 한 단계 상위로 이동.
+   - 홈 디렉터리 바로가기: cd ~는 홈 디렉터리로 이동하는 단축키입니다.
+3. 탭 자동 완성: 파일이나 디렉터리 이름을 입력할 때 탭 키를 사용해 자동 완성 기능을 활용할 수 있습니다. 원하는 디렉터리가 아니면 계속 탭을 눌러 다른 옵션을 표시할 수 있습니다.
+
+이러한 기능을 통해 디렉터리 이동을 쉽게 하고, 경로 입력을 간편하게 할 수 있습니다.
+
 ### 파일 및 텍스트 조작
